--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.917.0",
+    "@aws-sdk/s3-request-presigner": "^3.917.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
+    "mongoose": "^8.19.2",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
