--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.917.0",
     "@aws-sdk/s3-request-presigner": "^3.917.0",
     "framer-motion": "^12.23.24",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.545.0",
     "mongoose": "^8.19.2",
     "next": "15.5.4",
