--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
