--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.917.0",
     "@aws-sdk/s3-request-presigner": "^3.917.0",
+    "@radix-ui/react-slider": "^1.3.6",
     "framer-motion": "^12.23.24",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.545.0",
