--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@aws-sdk/client-s3": "^3.917.0",
     "@aws-sdk/s3-request-presigner": "^3.917.0",
     "@radix-ui/react-slider": "^1.3.6",
+    "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
+    "jsonwebtoken": "^9.0.2",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.545.0",
     "mongoose": "^8.19.2",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.26.3"
   },
