--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@radix-ui/react-slider": "^1.3.6",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "csvtojson": "^2.0.14",
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.545.0",
     "mongoose": "^8.19.2",
-    "next": "15.5.7",
+    "next": "^15.5.9",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
